--- a/derash/templates/logged_in_home.html
+++ b/derash/templates/logged_in_home.html
@@ -18,6 +18,8 @@
 <body>
     <header class="header">
         <h1 class="app-name">DERASH</h1>
+        <input type="checkbox" name="" id="header-menu">
+        <label for="header-menu" class="header-menu-btn"><i class="fa-solid fa-bars"></i></label>
         <div class="links">
             <a href="{{ url_for('home') }}" class="nav-link">Home</a>
             <a href="#" class="nav-link">About</a>
