--- a/derash/templates/select_user.html
+++ b/derash/templates/select_user.html
@@ -15,7 +15,7 @@
                 <li><i class="fa-solid fa-check"></i><p>Get to experience a variety of international cuisines at the comfort of your home</p></li>
                 <li><i class="fa-solid fa-check"></i><p>Enjoy a user-friendly ordering system, with an emphasis on transparency</p></li>
             </ul>
-            <a href="{{ url_for('register_customer') }}">Become a Derash customer</a>
+            <a href="{{ url_for('register_customer') }}">Register</a>
         </div>
         <div class="owner-selection selection">
             <h3>Manager</h3>
@@ -25,7 +25,7 @@
                 <li><i class="fa-solid fa-check"></i><p>Experience the robust, and quick order management system</p></li>
                 <li><i class="fa-solid fa-check"></i><p>Get a 24/7 available view of the current and past orders, in any of your restaurants</p></li>
             </ul>
-            <a href="{{ url_for('register_owner') }}">Become a Derash manager</a>
+            <a href="{{ url_for('register_owner') }}">Register</a>
         </div>
         <div class="driver-selection selection">
             <h3>Driver</h3>
@@ -35,7 +35,7 @@
                 <li><i class="fa-solid fa-check"></i><p>Get a 24/7 available view of the current and past deliveries you have made</p></li>
                 <li><i class="fa-solid fa-check"></i><p>Enjoy the power to choose where, and when to deliver, with no restrictions</p></li>
             </ul>
-            <a href="{{ url_for('register_driver') }}">Become a Derash driver</a>
+            <a href="{{ url_for('register_driver') }}">Register</a>
         </div>
     </div>
     <small>Images by Freepik</small>
