--- a/derash/static/styles/logged_in_forms.css
+++ b/derash/static/styles/logged_in_forms.css
@@ -17,6 +17,7 @@ body {
 }
 
 form {
+    margin: 10px;
     padding: 50px;
     border-radius: 30px;
     color: #fff;
@@ -52,6 +53,7 @@ form fieldset {
 
 .field input, .field textarea {
     font-family: "Quicksand", sans-serif;
+    width: 100%;
     margin-top: 5px;
     padding: 2px 0;
     font-size: 16px;
@@ -84,4 +86,29 @@ textarea {
 .submit input:hover {
     background-color: rgb(230,69,95);
     cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+    form {
+        padding: 50px 25px;
+    }
+
+    legend {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    form {
+        padding: 50px 25px;
+    }
+
+    legend {
+        font-size: 20px;
+    }
+
+    .field label {
+        font-size: 14px;
+    }
+
 }
